<resources>
    <string name="app_name">Pentatonic</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="reset">Reset</string>
    <string name="replace">Replace letter with...</string>
    <string name="title_replace_dialog">Choose what to replace</string>
    <string name="with">with</string>
    <string name="replace_text">Replace</string>
    <string name="replace_positive_button">Replace</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="icon_pentatonic">Icon pentatonic</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="description">Pentatonic est un projet créé par nimOroshix dans le but de résoudre des Pentatonics sur Android.</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="beginner">Beginner</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very hard</string>
    <string name="dialog_remove_message">You want to remove this character:</string>
    <string name="menu_remove_letter">Remove letter…</string>
    <string name="default_title">Titre</string>
    <string name="share">Share</string>
</resources>
